--- a/Configurations/config.ini
+++ b/Configurations/config.ini
@@ -1,9 +1,9 @@
 [common_info]
-baseUrl=https://pds-billing-info.tibilprojects.com/
+baseUrl=https://uat-pds-billing-info.pdsnew.com/
 username = admin
 password = admin
 
-baseUrl(AT)=https://pds-bi-automationtool.tibilprojects.com/
+baseUrl(AT)=https://uat-pds-bi-automationtool.pdsnew.com/
 username(AT) = admin
 password(AT) = admin
 
