--- a/Configurations/config.ini
+++ b/Configurations/config.ini
@@ -2,11 +2,15 @@
 baseUrl=https://uat-pds-billing-info.pdsnew.com/
 username = admin
 password = admin
+FakeUsername = Admin
+FakePassword = Admin
 
 baseUrl(AT)=https://uat-pds-bi-automationtool.pdsnew.com/
 username(AT) = admin
 password(AT) = admin
-
+FakeUsername(AT) = Admin
+FakePassword(AT)= Admin
+Empty =
 Community =
 Deaconess =
 WomensHospital =
