--- a/Configurations/config.ini
+++ b/Configurations/config.ini
@@ -11,7 +11,7 @@ password(AT) = admin
 FakeUsername(AT) = Admin
 FakePassword(AT)= Admin
 Empty =
-Community =
+Community =/home/inchara/Downloads/inputfile_october/community/PAYMENTS_AGY-PAYN.TXT
 Deaconess =
 WomensHospital =
 St_Vincent =
@@ -21,3 +21,4 @@ GoodSam =
 
 BookToFacs =
 WeeklyReports =
+Search = Moss
