--- a/Configurations/config.ini
+++ b/Configurations/config.ini
@@ -19,6 +19,6 @@ St_Vincent_dunn =
 Park_view =
 GoodSam =
 
-BookToFacs =
+BookToFacs =/home/inchara/Downloads/inputfile_october/booktofacs/payrpt.csv
 WeeklyReports =
 Search = Moss
